# laba6

./: CMakeLists.txt  main.cpp
